--- a/proj002/design/estilo.css
+++ b/proj002/design/estilo.css
@@ -6,37 +6,43 @@
 body{
     background-color: #E6E6E6;
     position: absolute;
-    font-family: Open Sans;
+    font-family: "open-sans";
     
     width: 300px;
-    height: 568px;
-    
+    height: auto;
 }
 
 
-h1{
+h1, h3, h5{
     width: 300px;
-    height: 168px;
+    height: 160px;
     margin-bottom: 0px;
     left: 3.12%;
     right: 3.12%;
     top: 1.94%;
-    bottom: 68.49%;
+    bottom: 68.94%;
     
-    background: #FFFFFF;
+    background-color: #FFFFFF;
+}
+img{
+    width: 300px;
+    height: 160px;
     border-radius: 2px 2px 0px 0px;
 }
 
-h2{
+
+h2, h4, h6{
     width: 300px;
     height: 160px;
     margin-top: 0px;
     left: 3.44%;
     right: 2.81%;
     top: 31.51%;
-    bottom: 41.55%;
+    bottom:41.55%;
+    text-align: justify;
+    line-height: 16px;
     
-    background-color: #FFFFFF;
+    background: #FFFFFF;
     box-shadow: 0px 1px 1px 
         rgba(153, 153, 153, 0.5);
     border-radius: 0px 0px 2px 2px;
@@ -68,15 +74,11 @@ td2{
     line-height: 16px;
     text-transform: uppercase;
     
+    
     color: #999999;
 }
 
-a{
-    left: 5.94%;
-    right: 5.62%;
-    top: 36.97%;
-    bottom: 53.52%;
-    
+a{  text-align: justify;  
     text-decoration: none;
     font-style: normal;
     font-weight: bold;
@@ -90,15 +92,18 @@ a{
 }
 
 p{
-    left: 5.94%;
-    right: 5.62%;
-    top: 48.06%;
-    bottom: 46.3%;
-    
+    text-align: justify;
     font-style: normal;
     font-weight: 300;
     font-size: 14px;
     line-height: 16px;
     
     color: #333333;
+}
+
+h3, h4, h5, h6{
+    left: 3.44%;
+    right: 2.81%;
+    top: 31.51%;
+    bottom: 41.55%;
 }
